--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -35,7 +35,7 @@ article p img {
 }
 
 .sp .sp__title {
-  padding: 1em 2em 1em 3em;
+  padding: 1em 2em 1em 3.3em;
   -webkit-transition: all 0.5s;
   transition: all 0.8s;
 
@@ -48,6 +48,10 @@ article p img {
     /* background: #FF5D6E; //red*/
     background: #A3DE83;
     color: #000;
+}
+
+.sp .sp__title:hover .burgSpoiler {
+    opacity: 1;
 }
 
 .sp .sp__title:hover::before {
@@ -102,6 +106,10 @@ article p img {
 }
 
 
+.mainContainer .wrapper .post .postHeader h1 {
+  margin-bottom: 10px;
+}
+
 hr {
   height: 0.25em;
   padding: 0;
@@ -116,14 +124,13 @@ hr {
   width: 30px;
   height: 60px;
   top: 4px;
-  left: 0;
+  left: 15px;
   -webkit-transition-duration: 0.5s;
           transition-duration: 0.5s;
   opacity: .5;
 }
 .burgSpoiler:hover {
   cursor: pointer;
-  opacity: 1;
 }
 .burgSpoiler .icon-left {
   -webkit-transition-duration: 0.5s;
@@ -225,10 +232,10 @@ hr {
       -moz-animation-timing-function: linear;
         -o-animation-timing-function: linear;
            animation-timing-function: linear;
-  -webkit-animation-duration: 3s;
-     -moz-animation-duration: 3s;
-       -o-animation-duration: 3s;
-          animation-duration: 3s;
+  -webkit-animation-duration: 5s;
+     -moz-animation-duration: 5s;
+       -o-animation-duration: 5s;
+          animation-duration: 5s;
   -webkit-animation-iteration-count: infinite;
      -moz-animation-iteration-count: infinite;
        -o-animation-iteration-count: infinite;
