--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -42,12 +42,16 @@ article p img {
   position: relative;
 }
 
-
 .sp .sp__title:hover {
     cursor: pointer;
     /* background: #FF5D6E; //red*/
     background: #A3DE83;
     color: #000;
+}
+
+.sp .sp__title.open {
+  background: #A3DE83;
+  color: #000;
 }
 
 .sp .sp__title:hover .burgSpoiler {
@@ -191,6 +195,11 @@ hr {
   content: "";
   top: 10px;
 }
+
+.burgSpoiler.open {
+  opacity: 1;
+}
+
 .burgSpoiler.open .icon-left {
   -webkit-transition-duration: 0.5s;
           transition-duration: 0.5s;
